--- a/spec/dashboard.api.yaml
+++ b/spec/dashboard.api.yaml
@@ -83,8 +83,8 @@ paths:
       parameters:
         - $ref: "#/components/parameters/dashboardIdOrUrn"
       responses:
-        "200":
-          description: "Dashboard deleted."
+        "204":
+          description: "Dashboard deleted (return ok, but no content)."
         "400":
           $ref: "#/components/responses/dashboardClientErrors"
         "403":
