STAC-22598: Add content too big return code to timeline

--- a/spec/timeline.api.yaml
+++ b/spec/timeline.api.yaml
@@ -16,6 +16,8 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/timelineSummaryResponse"
+        "413": # Used to denote an overflow. This can happen when a limit is reached (like traversal/topology limit).
+          $ref: "#/components/responses/timelineSummaryErrorResponse"
         "500":
           $ref: "#/components/responses/timelineSummaryErrorResponse"
 
